# configlib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
examples/: CMakeLists.txt  config.json  example_config.cpp
include/configlib/: ConfigManager.hpp
src/: CMakeLists.txt  ConfigManager.cpp
tests/: CMakeLists.txt  test_config_manager.cpp
